fix: update nav bar alignment to use space-evenly for better layout

--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -13,7 +13,7 @@ nav {
 	border-radius: 100vh;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
 	font-size: 2rem;
 	border: 5px var(--secondary) solid;
